[project]
name = "adk-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=0.5.0",
    "litellm>=1.67.5",
    "openai>=1.78.1",
]

[tool.uv.workspace]
members = [
    "adk_starter",
    "adk_tool",
    "adk_multi_agent",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
